<?xml version="1.0"?>
<package format="3">
    <name>le_vins</name>
    <version>1.0.0</version>
    <description>The LE-VINS ROS Interface</description>

    <license>GPLv3</license>

    <maintainer email="thl@whu.edu.cn">hailiang</maintainer>
    <author email="thl@whu.edu.cn">hailiang</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>geometry_msgs</depend>
    <depend>livox_ros_driver2</depend>
    <depend>nav_msgs</depend>
    <depend>pcl_conversions</depend>
    <depend>rclcpp</depend>
    <depend>rosbag2_cpp</depend>
    <depend>rosbag2_storage</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2_ros</depend>

    <exec_depend>rviz2</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
